--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GitHub search repositories</title>
+    <title>GitHub search</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
 
@@ -12,7 +12,7 @@
     <div class="app">
       <input class="search-input">
       <div class="repository-wrapper">
-        <ul class="repositoryList"></ul>
+        <ul class="repositoryListSearch"></ul>
       </div>
       
       <div class="saveContainer">
